--- a/src/main/resources/com/javafx/mediaplayer/scene.fxml
+++ b/src/main/resources/com/javafx/mediaplayer/scene.fxml
@@ -50,7 +50,7 @@
       <Label fx:id="timeDuration" layoutX="564.0" layoutY="42.0" text=" " textFill="#f5f0f0" />
    </AnchorPane>
    <VBox layoutX="-1.0" layoutY="-1.0" prefHeight="366.0" prefWidth="173.0" style="-fx-background-color: #353143;">
-      <ListView fx:id="playlistsListView" prefHeight="366.0" prefWidth="173.0" style="-fx-background-color: grey;" />
+      <ListView fx:id="playlistsListView" onDragDropped="#handleDropPlaylists" onDragOver="#handleDragOverPlaylists" prefHeight="366.0" prefWidth="173.0" style="-fx-background-color: grey;" />
    </VBox>
    <Label fx:id="songLabel" alignment="CENTER" layoutX="-1.0" layoutY="364.0" prefHeight="30.0" prefWidth="763.0" style="-fx-background-color: #332c54; -fx-background-insets: 1;" text="Waiting..." textFill="#f1effc">
       <font>
